# VR-Volumeviewer

./: .gitignore  .gitmodules  ArcBall.cpp  ArcBall.h  CMakeLists.txt  CreateMovieAction.cpp  CreateMovieAction.h  Data.cpp  Data.h  DepthTexture.cpp  DepthTexture.h  FontHandler.cpp  FrameBufferObject.cpp  FrameBufferObject.h  HelperFunctions.cpp  Labels.cpp  LoadDataAction.cpp  LoadDataAction.h  LoadDescriptionAction.cpp  LoadDescriptionAction.h  LoadNrrdAction.cpp  LoadNrrdAction.h  README.md  Shader.cpp  Shader.h  TransferFunction.cpp  TransferFunction.h  Volume.cpp  Volume.h  VolumeRaycastRenderer.cpp  VolumeRaycastRenderer.h  VolumeRaycastShader.cpp  VolumeRaycastShader.h  VolumeRenderer.h  VolumeSliceRender.cpp  VolumeSliceRender.h  VolumeSliceRenderShader.cpp  VolumeSliceRenderShader.h  VolumeSliceRenderer.cpp  VolumeSliceRenderer.h  (+8 more)
.github/worflows/: cmake.yml
.github/workflows/: bat2exe.yml  build-release  build-release.yml  build.yml  cmake.yml  download_vcresdristr.yml  linux_deploy.yml  list_files_test.yml  release.yml  test-macos-release.yml  test-release.yml  test-zip-files.yml
NarragansettBay/: Glider.cpp  Glider.h  Labels.cpp  Labels.h  LoadGliderDataAction.cpp  LoadGliderDataAction.h  Tool.cpp  Tool.h  VRFontHandler.cpp  VRFontHandler.h  main.cpp
Resources/: README.md
docs/: documentation.md  volume-viewer-documentation.md
include/UI/: UIView.h
include/common/: common.h
include/interaction/: ArcBall.h  ArcBallCamera.h  CreateMovieAction.h  HelperFunctions.h  LabelManager.h  Labels.h  LabelsManager.h  PointOfInterests.h  Simulation.h
include/loader/: LoadDataAction.h  LoadDescriptionAction.h  LoadNrrdAction.h  MeshData.h  VRDataLoader.h
include/render/: DepthTexture.h  FontHandler.h  FrameBufferObject.h  Mesh.h  Model.h  Shader.h  ShaderUniforms.h  Texture.h  Volume.h  Volume2D.h  Volume3D.h  VolumeRaycastRenderer.h  VolumeRaycastShader.h  VolumeRenderer.h  VolumeSliceRenderer.h  VolumeSliceShader.h
include/vrapp/: VRVolumeApp.h  VolumeVisualizationApp.h
libs/: glm.h  tiny_obj_loader.h
libs/GLMLoader/: CMakeLists.txt  GLMLoader.cpp  GLMLoader.h  VertexBuffer.cpp  VertexBuffer.h
libs/Model/: CMakeLists.txt  Model.cpp  Model.h
libs/ShaderProgram/: CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.h
libs/Texture/: CMakeLists.txt  Texture.cpp  Texture.h
libs/UIHelpers/: Vec2.cpp  Vec2.h  histogram.cpp  histogram.h  transfer_function_multichannel_widget.cpp  transfer_function_multichannel_widget.h  transfer_function_widget.cpp  transfer_function_widget.h
libs/stb_image/: CMakeLists.txt
libs/transferfunction/: transfer_function_multichannel_widget.cpp  transfer_function_multichannel_widget.h  transfer_function_widget.cpp  transfer_function_widget.h
observers/: desktop_observer.minvr
patches/: minvr_patch_09142021.patch
shaders/: lines_shader.frag  lines_shader.vert  raycast_shader.frag  raycast_shader.vert  shader.frag  shader.vert
share/data/: Description.txt  OSOMDatafile.txt  OSOM_with_texture.obj.mtl  exampleOSOMDatafile.txt
share/scripts/: OSOM_DATA_DOWNLOAD_LINK.txt  ReadmeSaveGoogleEarthData.txt  convertMarkers.m  createMesh.m  createVolumeViewerData.m  getElevations.m  get_google_map.m  saveobjmesh.m  scoord_du_new2.m  stretching.m
src/: main.cpp
src/UI/: UIView.cpp
src/interaction/: ArcBall.cpp  ArcBallCamera.cpp  CreateMovieAction.cpp  HelperFunctions.cpp  LabelManager.cpp  Labels.cpp  LabelsManager.cpp  Simulation.cpp
src/loader/: LoadDataAction.cpp  LoadDescriptionAction.cpp  LoadNrrdAction.cpp  VRDataLoader.cpp
src/render/: DepthTexture.cpp  FontHandler.cpp  FrameBufferObject.cpp  Mesh.cpp  Shader.cpp  ShaderUniforms.cpp  Texture.cpp  Volume.cpp  Volume2D.cpp  Volume3D.cpp  VolumeRaycastRenderer.cpp  VolumeRaycastShader.cpp  VolumeSliceRenderer.cpp  VolumeSliceShader.cpp
src/vrapp/: VRVolumeApp.cpp  VolumeVisualizationApp.cpp
superbuild/: CMakeLists.txt  build_oscar.sh  build_oscar_release.sh  macros.cmake
superbuild/CPPFSD/: CMakeLists.txt
superbuild/Choreograph/: CMakeLists.txt
superbuild/FTGL/: CMakeLists.txt
superbuild/MinVR/: CMakeLists.txt
superbuild/OpenVR/: CMakeLists.txt
superbuild/clean/: clean.py
superbuild/cmake/: FindCPPFS.cmake  FindChoreograph.cmake  FindFTGL.cmake  FindFreetype.cmake  FindGLEW.cmake  FindGLM.cmake  FindGLMLoader.cmake  FindGlew.cmake  FindImgui.cmake  FindImguiVR.cmake  FindMinVR.cmake  FindModel.cmake  FindOpenCV.cmake  FindOpenVR.cmake  FindShaderProgram.cmake  FindStb_image.cmake  FindTeem.cmake  FindTexture.cmake  FindZlib.cmake  Findglew.cmake
superbuild/freetype/: CMakeLists.txt
superbuild/glew/: CMakeLists.txt
superbuild/glfw/: CMakeLists.txt
superbuild/glm/: CMakeLists.txt
superbuild/opencv/: CMakeLists.txt
superbuild/scripts/: CCV_VR_VWR.bat  VolumeViewerInnoScript.iss  execute_bat2exe_background.bat
superbuild/teem/: CMakeLists.txt
superbuild/vr-imgui/: CMakeLists.txt
superbuild/zlib/: CMakeLists.txt
superbuild2/: CMakeLists.txt  macros.cmake
superbuild2/CPPFSD/: CMakeLists.txt
superbuild2/FTGL/: CMakeLists.txt
superbuild2/MinVR/: CMakeCache.txt  CMakeLists.txt
superbuild2/clean/: clean.bat
superbuild2/cmake/: FindFreetype.cmake  FindGlew.cmake  FindMinVR.cmake  FindModel.cmake  FindOpenCV.cmake  FindStb_image.cmake  FindTexture.cmake  FindZlib.cmake  macros.cmake
superbuild2/freetype/: CMakeLists.txt
superbuild2/glew/: CMakeLists.txt
superbuild2/glm/: CMakeLists.txt
superbuild2/zlib/: CMakeLists.txt
transferfunction/: transfer_function_multichannel_widget.cpp  transfer_function_widget.cpp  transfer_function_widget.h
